--- a/config/version.yml
+++ b/config/version.yml
@@ -6,16 +6,16 @@ current:
   major: 1
   minor: 0
   patch: 0
-  prerelease: ''
+  prerelease: 2-g398de86
   buildmetadata: ''
-  commit: 7075eb
+  commit: 398de8
   timestamp:
     year: 2020
     month: 1
     day: 17
-    hour: 19
-    minute: 24
-    second: 18
+    hour: 20
+    minute: 36
+    second: 19
     timezone: UTC
 commit:
   mode: git-local
