--- a/config/version.yml
+++ b/config/version.yml
@@ -6,16 +6,16 @@ current:
   major: 1
   minor: 0
   patch: 0
-  prerelease: 2-g398de86
+  prerelease: 5-gbe9d8ac
   buildmetadata: ''
-  commit: 398de8
+  commit: be9d8a
   timestamp:
     year: 2020
     month: 1
     day: 17
     hour: 20
-    minute: 36
-    second: 19
+    minute: 46
+    second: 14
     timezone: UTC
 commit:
   mode: git-local
