--- a/config/version.yml
+++ b/config/version.yml
@@ -6,16 +6,16 @@ current:
   major: 1
   minor: 0
   patch: 0
-  prerelease: 5-gbe9d8ac
+  prerelease: 6-g08d1d63
   buildmetadata: ''
-  commit: be9d8a
+  commit: 08d1d6
   timestamp:
     year: 2020
     month: 1
     day: 17
     hour: 20
-    minute: 46
-    second: 14
+    minute: 59
+    second: 33
     timezone: UTC
 commit:
   mode: git-local
