Changed paginated index to auto generated index

--- a/config/version.yml
+++ b/config/version.yml
@@ -6,16 +6,16 @@ current:
   major: 1
   minor: 0
   patch: 0
-  prerelease: 17-g6dd3341
+  prerelease: 18-gdcc7187
   buildmetadata: ''
-  commit: 6dd334
+  commit: dcc718
   timestamp:
     year: 2020
     month: 2
     day: 4
-    hour: 13
-    minute: 34
-    second: 36
+    hour: 14
+    minute: 13
+    second: 1
     timezone: UTC
 commit:
   mode: git-local
