--- a/config/version.yml
+++ b/config/version.yml
@@ -6,16 +6,16 @@ current:
   major: 1
   minor: 0
   patch: 0
-  prerelease: 22-gbe1d0ac
+  prerelease: 23-gc64f4d7
   buildmetadata: ''
-  commit: be1d0a
+  commit: c64f4d
   timestamp:
     year: 2020
     month: 2
     day: 4
     hour: 14
-    minute: 37
-    second: 58
+    minute: 47
+    second: 40
     timezone: UTC
 commit:
   mode: git-local
