--- a/config/version.yml
+++ b/config/version.yml
@@ -6,16 +6,16 @@ current:
   major: 1
   minor: 0
   patch: 0
-  prerelease: 25-gb4ad259
+  prerelease: 26-gf76713b
   buildmetadata: ''
-  commit: b4ad25
+  commit: f76713
   timestamp:
     year: 2020
     month: 2
     day: 4
     hour: 14
-    minute: 51
-    second: 1
+    minute: 53
+    second: 17
     timezone: UTC
 commit:
   mode: git-local
