--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "highcharts-vue": "^1.3.5",
         "tempusdominus-bootstrap-4": "^5.1.2",
         "tempusdominus-core": "^5.0.3",
-        "vue-paginate": "^3.6.0",
+        "vue-paginate": "github:marcioelias/vue-paginate",
         "vuex": "^3.1.2"
     }
 }
